Interface: Move the tz_context.h from app to interface
The APIs in tz_context.h are for NS usage, so it should
belong to interface.
And the implementations source files should include it.
It should be exported when building as well.

Change-Id: Ia6970b3e0a6e492411ec1b70783c1bdd555df8b9
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -374,6 +374,9 @@ function(set_up_secure_fw_build)
 						${INTERFACE_INC_DIR}/tfm_ns_svc.h
 			DESTINATION ${EXPORT_INC_DIR})
 
+	install(FILES       ${INTERFACE_INC_DIR}/ext/tz_context.h
+			DESTINATION ${EXPORT_INC_DIR}/ext)
+
 	if (TFM_MULTI_CORE_TOPOLOGY)
 		install(FILES       ${INTERFACE_INC_DIR}/tfm_multi_core_api.h
 							${INTERFACE_INC_DIR}/tfm_ns_mailbox.h
