Build: Convert musca_a target to modern cmake
Add cmake files to musca_a target directory. Alter scatter files to
remove preprocessor shebang. Alter header files where include paths have
changed.

WARNING: This change will not build in isolation, it requires _all_
other cmake changes to successfully build. It is split out only for ease
of understanding.

Signed-off-by: Raef Coles <raef.coles@arm.com>
Signed-off-by: Balint Matyi <Balint.Matyi@arm.com>
Change-Id: Icde58c51a248d680a8a00a9516f15f86906a0e57

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -119,6 +119,12 @@ if(BL2)
             tfm_arch
     )
 
+    if (NOT DEFINED MCUBOOT_UPGRADE_STRATEGY)
+        message(FATAL_ERROR "MCUBOOT_UPGRADE_STRATEGY is undefined")
+    else()
+        string(CONCAT UPGRADE_STRATEGY "MCUBOOT_" ${MCUBOOT_UPGRADE_STRATEGY})
+    endif()
+
     target_compile_definitions(platform_bl2
         PUBLIC
             BL2
