--- a/secure_fw/partitions/lib/sprt/CMakeLists.txt
+++ b/secure_fw/partitions/lib/sprt/CMakeLists.txt
@@ -1,38 +1,31 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2019-2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.13)
 
-#Tell cmake where our modules can be found
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+add_library(tfm_sprt STATIC)
 
-#Some project global settings
-set (LIBSPRT_DIR "${CMAKE_CURRENT_LIST_DIR}")
-get_filename_component(TFM_ROOT_DIR "${CMAKE_SOURCE_DIR}" ABSOLUTE)
+target_include_directories(tfm_sprt
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+)
 
-#Include common stuff to control cmake.
-include("Common/BuildSys")
+target_sources(tfm_sprt
+    PRIVATE
+        ./crt_memcmp.c
+        ./crt_memcpy.c
+        ./crt_memmove.c
+        ./crt_memset.c
+        ./service_api.c
+)
 
-#Start an embedded project.
-embedded_project_start(CONFIG "${TFM_ROOT_DIR}/configs/ConfigDefault.cmake")
-project(libtfmsprt LANGUAGES ASM C)
-embedded_project_fixup()
-
-#Get the definition of what files we need to build
-include(CMakeLists.inc)
-
-#Build secure partition runtime library as a static library
-add_library(libtfmsprt STATIC ${ALL_SRC_ASM_S} ${ALL_SRC_C_S})
-embedded_set_target_compile_defines(TARGET libtfmsprt LANGUAGE C DEFINES __thumb2__)
-if (DEFINED CMSE_FLAGS)
-    embedded_set_target_compile_flags(TARGET libtfmsprt LANGUAGE C APPEND FLAGS ${CMSE_FLAGS})
-endif()
-#Set common compiler and linker flags
-config_setting_shared_compiler_flags(libtfmsprt)
-config_setting_shared_linker_flags(libtfmsprt)
-
-embedded_project_end(libtfmsprt)
+target_link_libraries(tfm_sprt
+    platform_s
+    psa_interface
+    tfm_boot_status
+    tfm_secure_api
+)
