--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -1,5 +1,3 @@
-#! armclang --target=arm-arm-none-eabi -march=armv8-m.main -E -xc
-
 /*
  * Copyright (c) 2017-2020 Arm Limited. All rights reserved.
  *
@@ -34,7 +32,10 @@ LR_CODE S_CODE_START {
         device_definition.o (+RO)
         *(SFN)
         *armlib*
-        *libtfmsprt.a (+RO)
+        *libtfm_sprt.a (+RO)
+        *psa_client.* (+RO)
+        *psa_service.* (+RO)
+        *psa_lifecycle.* (+RO)
     }
 
     /**** PSA RoT RO part (CODE + RODATA) start here */
