--- a/tools/tfm_psa_ff_test_manifest_list.yaml.in
+++ b/tools/tfm_psa_ff_test_manifest_list.yaml.in
@@ -14,7 +14,7 @@
    {
       "name": "PSA FF Test Client Partition",
       "short_name": "PSA_FF_TEST_CLIENT",
-      "manifest": "../psa-arch-tests/api-tests/platform/manifests/client_partition_psa.json",
+      "manifest": "@PSA_ARCH_TESTS_PATH@/api-tests/platform/manifests/client_partition_psa.json",
       "tfm_partition_ipc": true,
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
@@ -29,7 +29,7 @@
     {
       "name": "PSA FF Test Server Partition",
       "short_name": "PSA_FF_TEST_SERVER",
-      "manifest": "../psa-arch-tests/api-tests/platform/manifests/server_partition_psa.json",
+      "manifest": "@PSA_ARCH_TESTS_PATH@/api-tests/platform/manifests/server_partition_psa.json",
       "tfm_partition_ipc": true,
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
@@ -44,7 +44,7 @@
     {
       "name": "PSA FF Test Driver Partition",
       "short_name": "PSA_FF_TEST_DRIVER",
-      "manifest": "../psa-arch-tests/api-tests/platform/manifests/driver_partition_psa.json",
+      "manifest": "@PSA_ARCH_TESTS_PATH@/api-tests/platform/manifests/driver_partition_psa.json",
       "tfm_partition_ipc": true,
       "conditional": "PSA_API_TEST_IPC",
       "version_major": 0,
