--- a/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_spm_db_ipc.inc.template
@@ -101,15 +101,17 @@ static uint32_t dependencies_{{manifest.manifest.name}}[] =
 const struct partition_static_t static_data_list[] =
 {
     {
-        .psa_framework_version = 0x0100,
-        .partition_id         = TFM_SP_NON_SECURE_ID,
+        .psa_ff_ver           = 0x0100,
+        .pid                  = TFM_SP_NON_SECURE_ID,
 #if TFM_MULTI_CORE_TOPOLOGY
-        .partition_flags      = SPM_PART_FLAG_PSA_ROT | SPM_PART_FLAG_IPC,
+        .flags                = SPM_PART_FLAG_PSA_ROT | SPM_PART_FLAG_IPC,
 #else
-        .partition_flags      = SPM_PART_FLAG_APP_ROT | SPM_PART_FLAG_IPC,
+        .flags                = SPM_PART_FLAG_APP_ROT | SPM_PART_FLAG_IPC,
 #endif
-        .partition_priority   = TFM_PRIORITY_LOW,
-        .partition_init       = tfm_nspm_thread_entry,
+        .priority             = TFM_PRIORITY_LOW,
+        .entry                = tfm_nspm_thread_entry,
+        .stack_base_addr      = 0,
+        .stack_size           = 0
     },
 
 {% for manifest in manifests %}
@@ -118,31 +120,33 @@ const struct partition_static_t static_data_list[] =
     {% endif %}
     {{'{'}}
     {% if manifest.manifest.psa_framework_version == 1.0 %}
-        .psa_framework_version = 0x0100,
+        .psa_ff_ver            = 0x0100,
     {% else %}
-        .psa_framework_version = 0,
+        .psa_ff_ver            = 0,
     {% endif %}
-        .partition_id         = {{manifest.manifest.name}},
+        .pid                   = {{manifest.manifest.name}},
     {% if manifest.attr.tfm_partition_ipc %}
-        .partition_flags      = SPM_PART_FLAG_IPC
+        .flags                 = SPM_PART_FLAG_IPC
     {% else %}
-        .partition_flags      = 0
+        .flags                 = 0
     {% endif %}
     {% if manifest.manifest.type == "APPLICATION-ROT" %}
-                              | SPM_PART_FLAG_APP_ROT
+                               | SPM_PART_FLAG_APP_ROT
     {% elif manifest.manifest.type == "PSA-ROT" %}
-                              | SPM_PART_FLAG_PSA_ROT | SPM_PART_FLAG_APP_ROT
+                               | SPM_PART_FLAG_PSA_ROT | SPM_PART_FLAG_APP_ROT
     {% else %}
 #error "Unsupported type '{{manifest.manifest.type}}' for partition '{{manifest.manifest.name}}'!"
     {% endif %}
                               ,
-        .partition_priority   = TFM_PRIORITY({{manifest.manifest.priority}}),
-        .partition_init       = {{manifest.manifest.entry_point}},
-        .dependencies_num     = {{manifest.manifest.dependencies | length()}},
+        .priority             = TFM_PRIORITY({{manifest.manifest.priority}}),
+        .entry                = {{manifest.manifest.entry_point}},
+        .stack_base_addr      = 0,
+        .stack_size           = 0,
+        .ndeps                = {{manifest.manifest.dependencies | length()}},
     {% if manifest.manifest.dependencies %}
-        .p_dependencies       = dependencies_{{manifest.manifest.name}},
+        .deps                 = dependencies_{{manifest.manifest.name}},
     {% else %}
-        .p_dependencies       = NULL,
+        .deps                 = NULL,
     {% endif %}
     {{'},'}}
     {% if manifest.attr.conditional %}
