Build: Convert docs directory to modern cmake
Add cmake files to docs directory. Remove unneeded cmake files.

By default, the targets are generated but not run by `make all` or
`make`. The documentation can be generated by running `make docs`

Please refer to the tfm_build_instructions document for
reference examples.

WARNING: This change will not build in isolation, it requires _all_
other cmake changes to successfully build. It is split out only for ease
of understanding.

Change-Id: I1b004a8f8ccfba2df901d91b093576fdc6bfa40d
Signed-off-by: Minos Galanakis <minos.galanakis@arm.com>
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,6 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type: [Debug, Release, RelWithDebInfo, MinSizeRel]" FORCE)
 endif()
 
-message(FATAL_ERROR "This commit is inside the patch chain for convertion of the
-old cmake buildsystem to the modern one. TFM will not build unless all of these
-patches have been applied, these commits are split only for ease of
-understanding. If you wish to build TFM, please checkout the commit
-\"Build: Convert docs directory to modern cmake\"")
-
 ############################ CONFIGURATION #####################################
 
 # First load defaults.
@@ -61,6 +55,7 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 add_subdirectory(lib/ext)
 add_subdirectory(tools)
+add_subdirectory(docs)
 if(NS)
     # Set to ${TFM_TEST_REPO_PATH}/app by default
     add_subdirectory(${TFM_APP_PATH} ${CMAKE_CURRENT_BINARY_DIR}/app)
