Increase ITS_MAX_ASSET_SIZE for PSA Crypto Compliance tests
This patch increments the ITS_MAX_ASSET_SIZE for PSA API Crypto
compliance tests as one of the tests need a larger size for it
to succeed.

Signed-off-by: Soby Mathew <soby.mathew@arm.com>
Change-Id: I12a8a50680d19a15668e889bf8ab94d4159b7018

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -276,6 +276,11 @@ function(set_up_secure_fw_build)
 		embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "PSA_API_TEST_IPC")
 	endif()
 
+	#Add the PSA API CRYPTO compliance test define if enabled
+	if(PSA_API_TEST_CRYPTO)
+		add_definitions(-DPSA_API_TEST_CRYPTO)
+	endif()
+
 	target_link_libraries(${EXE_NAME} libtfmsprt)
 
 	embedded_set_target_link_defines(TARGET ${EXE_NAME} DEFINES "TFM_LVL=${TFM_LVL}")
