SPM: Obtain memory info by memory symbols
- Global symbols are also part of HAL interfaces.
- This is the first example of using defined symbols to get memory
  info.

Change-Id: Id7fbaac4a90b95dfa4e6303e62e90fe5cdcdce53
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -45,6 +45,7 @@ target_sources(platform_s
         ext/common/tfm_platform.c
         $<$<BOOL:${PLATFORM_DEFAULT_UART_STDOUT}>:${CMAKE_CURRENT_SOURCE_DIR}/ext/common/uart_stdout.c>
         $<$<NOT:$<STREQUAL:${TFM_SPM_LOG_LEVEL},${TFM_SPM_LOG_LEVEL_SILENCE}>>:ext/common/tfm_hal_spm_logdev_peripheral.c>
+        ext/common/tfm_hal_memory_symbols.c
         $<$<BOOL:${PLATFORM_DUMMY_ATTEST_HAL}>:ext/common/template/attest_hal.c>
         $<$<BOOL:${PLATFORM_DUMMY_NV_COUNTERS}>:ext/common/template/nv_counters.c>
         $<$<BOOL:${PLATFORM_DUMMY_CRYPTO_KEYS}>:ext/common/template/crypto_keys.c>
