SPRTL: Add log API for Secure Partitions
SPM and Secure Partitions(SP) will use different log implementations.
This patch adds the implementations for SP:
 - SP log HAL API
 - SP log interface

The log implementations re-use the currently shared log implementations.

Change-Id: I3e87e9424e6ea2a51e534bdab85406e4007c8261
Signed-off-by: Kevin Peng <kevin.peng@arm.com>
Co-authored-by: Summer Qin <summer.qin@arm.com>
Co-authored-by: Shawn Shan <shawn.shan@arm.com>

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -47,6 +47,7 @@ target_link_libraries(tfm_partition_crypto
         platform_s
         crypto_service_mbedcrypto
         psa_interface
+        tfm_sprt
 )
 target_compile_definitions(tfm_partition_crypto
     PUBLIC
