Build: Add IAR support to new build system
Adding IAR toolchain cmake file and target files for
an519, an521, musca_a, sse-200_aws, psoc64, lpcxpresso55s69

Updated a few files to discriminate between armclang/gcc and iar

Removed some dead files

Add patch file to mbedcrypto - this can be removed once the PR with the
same changes is merged upstream

Signed-off-by: Raef Coles <raef.coles@arm.com>
Signed-off-by: TTornblom <thomas.tornblom@iar.com>
Change-Id: I2aafff7803d0aa12f1df598b8f157e94e1f3c03f

--- a/platform/ext/common/iar/tfm_common_s.icf.template
+++ b/platform/ext/common/iar/tfm_common_s.icf.template
@@ -297,7 +297,7 @@ define block LR_CODE with fixed order {
        };
 
 do not initialize  { section .noinit };
-initialize by copy { readwrite };
+initialize by copy with packing = none { readwrite };
 if (isdefinedsymbol(__USE_DLIB_PERTHREAD))
 {
   // Required in a multi-threaded application
