Build: Conditional include of psa manifest headers
If more than one partitions provides the same service the macros can
collide in generated files. So the psa manifest headers are included
only if the matching partition is built.

Change-Id: Ie622466c1a4663a7ed2f188e3b6552136eb4c900
Signed-off-by: Mark Horvath <mark.horvath@arm.com>

--- a/secure_fw/partitions/tfm_service_list.inc.template
+++ b/secure_fw/partitions/tfm_service_list.inc.template
@@ -10,8 +10,11 @@
 #ifndef __TFM_SERVICE_LIST_INC__
 #define __TFM_SERVICE_LIST_INC__
 
-{% for header in utilities.manifest_header_list %}
-#include "{{header}}"
+{% for manifest in manifests %}
+#ifdef {{manifest.attr.conditional}}
+#include "{{manifest.header_file}}"
+#endif /* {{manifest.attr.conditional}} */
+
 {% endfor %}
 
 const struct tfm_spm_service_db_t service_db[] =
