--- a/secure_fw/spm/cmsis_psa/tfm_secure_irq_handlers_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_secure_irq_handlers_ipc.inc.template
@@ -7,9 +7,13 @@
 
 {{utilities.donotedit_warning}}
 
-{% for header in utilities.manifest_header_list %}
-#include "{{header}}"
+{% for manifest in manifests %}
+#ifdef {{manifest.attr.conditional}}
+#include "{{manifest.header_file}}"
+#endif /* {{manifest.attr.conditional}} */
+
 {% endfor %}
+
 #include "cmsis_compiler.h"
 {% macro _irq_record(partition_name, signal, line, priority) -%}
 { {{ partition_name }}, {{ signal }}, {{ line }}, {{ priority }} },
