PSA_proxy: Create first version of PSA proxy partition
This implementation has some limitations, please check
docs/reference/services/tfm_psa_proxy_integration_guide.rst for details.

Change-Id: Ic1ce7aecfd8bb60b8fb87d5e64ffd186991b560b
Signed-off-by: Mark Horvath <mark.horvath@arm.com>

--- a/platform/ext/common/armclang/tfm_common_s.sct.template
+++ b/platform/ext/common/armclang/tfm_common_s.sct.template
@@ -312,6 +312,12 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     }
 #endif
 
+#if defined(PSA_PROXY_SHARED_MEMORY_BASE)
+    PSA_PROXY_SHARED_MEMORY PSA_PROXY_SHARED_MEMORY_BASE PSA_PROXY_SHARED_MEMORY_SIZE {
+        *(PSA_PROXY_SHARED_MEMORY_SECTION)
+    }
+#endif
+
 #if defined (S_RAM_CODE_START)
     /* Executable code allocated in RAM */
     TFM_RAM_CODE S_RAM_CODE_START {
