--- a/secure_fw/partitions/protected_storage/CMakeLists.txt
+++ b/secure_fw/partitions/protected_storage/CMakeLists.txt
@@ -6,6 +6,14 @@
 #-------------------------------------------------------------------------------
 
 if (NOT TFM_PARTITION_PROTECTED_STORAGE)
+    if(TFM_PARTITION_PSA_PROXY)
+        add_library(tfm_partition_ps INTERFACE)
+
+        target_include_directories(tfm_partition_ps
+            INTERFACE
+                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        )
+    endif()
     return()
 endif()
 
